fix row spacing

--- a/meal-ui/src/styles/local/partials/5-pages/home-page/home-page.scss
+++ b/meal-ui/src/styles/local/partials/5-pages/home-page/home-page.scss
@@ -8,6 +8,10 @@
 	margin-left: auto;
 }
 
+.p-home__r1 > .quick-recipes-view > .common-card {
+	margin-top: $spacing-06;
+}
+
 .simple-card {
 	max-width: 30%;
 }
